--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -77,16 +77,14 @@
             </a>
         </li>
 
-        <!--
         <li class="nav-item">
           <a class="nav-link text-white {% if 'SEGMENT_HERE' in segment %} active {% endif %} " href="#">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">table_view</i>
             </div>
-            <span class="nav-link-text ms-1">LINK_HERE</span>
+            <span class="nav-link-text ms-1">Company Details</span>
           </a>
         </li>
-        -->
 
         {% if request.user.is_authenticated and not request.user.is_superuser %}
 
