--- a/templates/home/company_detail.html
+++ b/templates/home/company_detail.html
@@ -9,15 +9,22 @@
             <h3>Company Information</h3>
             <ul class="list-group">
                 <li class="list-group-item"><strong>Ticker:</strong> {{ companyticker.ticker }}</li>
-                <li class="list-group-item"><strong>Founded:</strong> {{ companyfoundingyear.founding_year.year }}</li>
-                <li class="list-group-item"><strong>Listing Year:</strong> {{ companylistingyear.listing_year.year }}</li>
+                <li class="list-group-item"><strong>Founded:</strong> {{ companyfoundingyear.founding_year.date }}</li>
+                <li class="list-group-item"><strong>Listing Year:</strong> {{ companylistingyear.listing_year.date }}</li>
                 <li class="list-group-item"><strong>Description:</strong> {{ companydescription.description }}</li>
                 <li class="list-group-item"><strong>Headquarters:</strong> {{ companyhq.headquarters }}</li>
                 <li class="list-group-item"><strong>Sector:</strong> {{ companysector.sector.name }}</li>
-                <li class="list-group-item"><strong>Financial Year End:</strong> {{ companyfinancialyearend.financial_year_end }}</li>
+                <li class="list-group-item"><strong>Financial Year End:</strong> {{ companyfinancialyearend.financial_year_end.date }}</li>
             </ul>
         </div>
-        <!-- Add more columns or information as needed -->
+        <div class="col-md-6">
+            <h3>Subsidiaries</h3>
+            <ul class="list-group">
+                {% for subsidiary in companysubsidiaries %}
+                <li class="list-group-item">{{ subsidiary.name }}</li>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
 </div>
 {% endblock %}
